--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ashe",
+  "name": "ashe-package",
   "version": "1.0.0",
   "description": "- https://www.processon.com/view/link/5dc2a16fe4b04913a28ce076",
   "main": "index.js",
