--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "config": "^3.2.4",
     "fastify": "^2.10.0",
+    "fastify-cors": "^2.1.3",
     "http-errors": "^1.7.3",
     "pm2": "^4.1.2",
     "pm2-logrotate": "^2.7.0"
