--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "browserslist": [
+    "last 3 Chrome versions"
+  ],
   "scripts": {
     "dev": "parcel src/index.html"
   },
@@ -14,7 +17,11 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
+    "ashe-core": "file:../core",
+    "axios": "^0.19.0",
+    "core": "file:../core",
     "vue": "^2.6.10",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-hot-reload-api": "^2.3.4",
+    "vuex": "^3.1.1"
   }
 }
