--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "ashe-core": "file:../core",
     "axios": "^0.19.0",
     "core": "file:../core",
+    "element-ui": "^2.12.0",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.4",
     "vuex": "^3.1.1"
