--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "element-ui": "^2.12.0",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.4",
+    "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   }
 }
