--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,17 @@
     "last 3 Chrome versions"
   ],
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
     "@vue/component-compiler-utils": "^3.0.2",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
     "parcel-bundler": "^1.12.4",
     "vue-template-compiler": "^2.6.10"
   },
