--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "last 3 Chrome versions"
   ],
   "scripts": {
+    "schema": "babel-node scripts/schema.js",
     "dev": "parcel src/index.html",
     "test": "jest"
   },
@@ -14,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@vue/component-compiler-utils": "^3.0.2",
     "babel-jest": "^24.9.0",
