--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "setup": "node scripts/setup.js",
     "dev": "cross-env NODE_ENV=development pm2 start ecosystem.config.js --no-daemon",
     "list": "pm2 list",
     "stop": "pm2 delete ecosystem.config.js",
@@ -15,7 +16,9 @@
     "config": "^3.2.4",
     "fastify": "^2.10.0",
     "fastify-cors": "^2.1.3",
+    "fastify-mongodb": "^2.0.0",
     "http-errors": "^1.7.3",
+    "mongodb": "^3.3.3",
     "pm2": "^4.1.2",
     "pm2-logrotate": "^2.7.0"
   },
