--- a/core/package.json
+++ b/core/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "schema": "babel-node scripts/schema.js"
+  },
   "peerDependencies": {
     "vue": "^2.6.10",
     "vuex": "^3.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/node": "^7.7.0",
+    "@babel/preset-env": "^7.7.1"
   }
 }
