--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "fastify": "^2.10.0",
     "fastify-cors": "^2.1.3",
     "fastify-mongodb": "^2.0.0",
+    "fastify-plugin": "^1.6.0",
     "http-errors": "^1.7.3",
     "mongodb": "^3.3.3",
     "pm2": "^4.1.2",
